feat: form input autofocus

--- a/authorization-server/frontend/src/app/features/login/components/login-form/login-form.component.html
+++ b/authorization-server/frontend/src/app/features/login/components/login-form/login-form.component.html
@@ -3,7 +3,7 @@
 
   <form (ngSubmit)="performLogin()" [formGroup]="formGroup">
     <div class="username-control">
-      <input formControlName="username" placeholder="Username">
+      <input formControlName="username" placeholder="Username" autofocus>
     </div>
     <div class="password-control">
       <input formControlName="password" placeholder="Password">
